<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pinball Map</string>
    <string name="select_region">Select your region..</string>
    <string name="splash_image_desc">Splash Image</string>
    <string name="splash_image_city_desc">City Splash Image</string>
    <string name="about_text">\tPinballMap.com\n\t\tScott Wainstock\n\t\tRyan Gratzer\n\n\tArtwork\n\t\tDrew Marshall\n\n\tSpecial Thanks\n\t\tCleo, Sassy, Solomon,\n\t\tBawb, and Brian Hanifin</string>
    <string name="sass_description">A beautiful kitten</string>
    <string name="enter_machine">Enter the machine name in the box below, or select it from the list..</string>
    <string name="enter_condition">Click the box below to enter a machine description..</string>
    <string name="add_machine">Add</string>
  	<string name="submit_description">Submit button</string>
  	<string name="machine_comment">Machine Comment: </string>
  	<string name="submit">Submit</string>
  	<string name="delete">Delete</string>
  	<string name="location_type">Location Type:</string>
  	<string name="edit_location_data">Edit Data At:</string>
  	<string name="phone_number">Phone Number:</string>
  	<string name="blank"> </string>
  	<string name="city">City</string>
  	<string name="name">Name</string>
  	<string name="street">Street</string>
  	<string name="state">State</string>
  	<string name="phone">Phone</string>
  	<string name="zip">Zip</string>
  	<string name="machines">Machines</string>
  	<string name="operator">Operator</string>
  	<string name="website">Website:</string>
  	<string name="submit_a_location">Submit A Location To The Map</string>
  	<string name="submit_text"> Submit </string>
  	<string name="machine_button_desc">Click to edit machine</string>
  	<string name="map_button">Click to show on map</string>
  	<string name="edit_button">Click to edit location</string>
  	<string name="nav_button">Click to show navigation directions</string>
  	<string name="add_machine_button">Click to add a machine</string>
  	<string name="remove_button">Click to remove machine</string>
  	<string name="search_hint">Search here..</string>
  	<string name="submitter_name">Your Name</string>
  	<string name="submitter_email">Your Email</string>
  	<string name="contact_admin">CONTACT ADMIN LOL</string>
  	<string name="message">MESSAGE LOL</string>
  	<string name="submit_a_region">SUBMIT A REGION LOL</string>
  	<string name="comments">COMMENTS LOL</string>
  	<string name="region_name">Region Name</string>
</resources>
