<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/suggestALocationLayout"
	    android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginStart="10dp"
	        android:text="@string/submit_a_location"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TableLayout
	        android:id="@+id/tableLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="top" >
	
	            <TextView
	                android:id="@+id/nameTextView"
	                android:text="@string/name"
	                android:labelFor="@+id/nameField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/nameField"
	                android:layout_marginStart="10dp"
	                android:inputType="text"
	                android:ems="10" >
	
	                <requestFocus />
	            </EditText>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/streetTextView"
	                android:text="@string/street"
	                android:labelFor="@+id/streetField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/streetField"
	                android:layout_marginStart="10dp"
	                android:ems="10"
	                android:inputType="textPostalAddress" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/cityTextView"
	                android:text="@string/city"
	                android:labelFor="@+id/cityField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/cityField"
	                android:inputType="text"
	                android:layout_marginStart="10dp"
	                android:ems="10" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/stateTextView"
	                android:text="@string/state"
	                android:labelFor="@+id/stateField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/stateField"
	                android:inputType="text"
	                android:layout_marginStart="10dp"
	                android:ems="10" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/zipTextView"
	                android:text="@string/zip"
	                android:labelFor="@+id/zipField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/zipField"
	                android:inputType="text"
	                android:layout_marginStart="10dp"
	                android:ems="10" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/phoneTextView"
	                android:text="@string/phone"
	                android:labelFor="@+id/phoneField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/phoneField"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginStart="10dp"
	                android:ems="10"
	                android:inputType="phone" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/websiteTextView"
	                android:text="@string/website"
	                android:labelFor="@+id/websiteField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/websiteField"
	                android:inputType="text"
	                android:layout_marginStart="10dp"
	                android:ems="10" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/operatorTextView"
	                android:text="@string/operator"
	                android:labelFor="@+id/operatorField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/operatorField"
	                android:layout_marginStart="10dp"
	                android:inputType="text"
	                android:ems="10" />
	        </TableRow>
	        <TableRow
	            android:id="@+id/tableRow9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/submitterNameTextView"
	                android:text="@string/submitter_name"
	                android:labelFor="@+id/submitterNameField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/submitterNameField"
	                android:layout_marginStart="10dp"
	                android:inputType="text"
	                android:ems="10" />
	        </TableRow>
	        <TableRow
	            android:id="@+id/tableRow10"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/submitterEmailTextView"
	                android:text="@string/submitter_email"
	                android:labelFor="@+id/submitterEmailField"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/submitterEmailField"
	                android:layout_marginStart="10dp"
	                android:inputType="textEmailAddress"
	                android:ems="10" />
	        </TableRow>
	    </TableLayout>
	
	    <TextView
	        android:id="@+id/machinesTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginStart="10dp"
	        android:layout_marginTop="20dp"
	        android:labelFor="@+id/multiAutoCompleteTextView1"
	        android:text="@string/machines"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <MultiAutoCompleteTextView
	        android:id="@+id/multiAutoCompleteTextView1"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:ems="10"
	        android:maxWidth="300dp"
	        android:width="300dp" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="10dp"
	        android:layout_marginTop="10dp"
	        android:onClick="buttonOnClick"
	        android:text="@string/submit_text" />
	
	</LinearLayout>
</ScrollView>